--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title></title>
     <style type="text/css" id="sharafBackground">
         .sharafBackground {
-            background-image: url('Images/Background01.jpg');
+            background-image: url('Background01.jpg');
             background-position: center top;
             height: 1197px;
         }
